# Distributed-mobility-prediction

./: .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  CDR_Analysis_December.ipynb  CDR_Analysis_November.ipynb  Data analyse.ipynb  End_Analysis.ipynb  README.md  Reproduction of paper.ipynb  SIZE_DATA.txt  Untitled.ipynb  arima_run.py  bench.py  benchmarks.txt  constants.py  db.py  demo.ipynb  eval.py  main.py  new_train.py  pickleset.py  picklesetBenchmark.py  pickleset_test.py  preprocessing.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  run.sh  setup.cfg  setup_db.sql  test.py  time-series-pred.ipynb  tox.ini  train.py  train_sinus.py
.github/workflows/: precommit.yml  tests.yml
Analyis/: End_Analysis.ipynb  select_specific_squares.py
Analysis/: K_Means_Clutering.ipynb  activity_per_square.pkl
assets/: milano-grid.geojson
data/: data.py  dataloader.py  db.db
models/: CNN.py  Conv.py  models.py
models/model/: best.pt  last.pt
src/: constants.py  runner.py
src/data/: dataloader.py  preprocessing.py  preprocessing_scripts.py
src/eval/: eval.py
src/gvslearning/data/: data.py  dataloader.py  preprocessing.py  preprocessing_scripts.py
src/gvslearning/eval/: eval.py
src/gvslearning/main/: __main__.py  hyp.yaml  run.py
src/gvslearning/models/: models.py
src/gvslearning/pickleset/: pickleset.py  picklesetBenchmark.py  temp_pickle.py
src/gvslearning/test/: test.py
src/gvslearning/train/: new_train.py
src/gvslearning/utils/: constants.py  util.py  wandb_plot.py
src/gvslearning/visualization/: GeoHeatMap.py  mse.py
src/main/: __init__.py  __main__.py  func.py  run.py
src/models/: models.py
src/models/example_model/: modeled.py
src/pickleset/: pickleset.py  picklesetBenchmark.py  temp_pickle.py
src/test/: test.py
src/train/: new_train.py
src/utils/: constants.py  util.py  wandb_plot.py
src/visualization/: GeoHeatMap.py  mse.py
src/wandb/run-20231218_131434-a4onu2bw/: run-a4onu2bw.wandb
src/wandb/run-20231218_131434-a4onu2bw/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
test/: pickleset_test.py
tests/: heatmap_test.py  mse_visualization_test.py  pickleset_test.py
train/: train.py
utils/: plot.py  preprocessing.py  temp_pickle.py  util.py  wandb_plot.py
visualization/: GeoHeatMap.py
