[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = ["--cov=src"]
testpaths = ["tests"]

[tool.mypy]
mypy_path = ["src"]
ignore_missing_imports = true
#check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
#disallow_any_generics = true
warn_unused_configs = true
warn_unreachable = true
#warn_return_any = true
warn_redundant_casts = true
no_implicit_reexport = true
