[metadata]
name = General v Specific Learning
author = Group B
author_email =
description = The lightweight PyTorch wrapper for ML researchers. Scale your models. Write less boilerplate.
keywords = machine learning, deep learning, pytorch
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = linux, unix, macos, windows, win32, os
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = pickleset, visualization
install_requires =
    pandas>=1.1.5
    torch>=2.1.0
    pre-commit
    flake8
    black
    folium~=0.14.0
    numpy~=1.26.0
    pytest~=7.4.0
    datasets~=2.12.0
    setuptools~=68.0.0
    geojson~=3.0.1
    shapely~=2.0.1

python_requires = >=3.6
package_dir =
    = src
zip_safe = No

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=1.0.0
    flake8>=4.0.0
    tox>=4.0.0


[options.package_data]
visualization = py.typed
